output_10.1.168/deflation.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
1 error generated when compiling for host.
Error while processing /tmp/deflation.h-06afb4.hip.

[HIPIFY] info: file './quda/include/deflation.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 3
  UNCONVERTED refs count: 0
  CONVERSION %: 100
  REPLACED bytes: 57
  TOTAL bytes: 5897
  CHANGED lines of code: 3
  TOTAL lines of code: 212
  CODE CHANGED (in bytes) %: 1
  CODE CHANGED (in lines) %: 1
  TIME ELAPSED s: 0.84
[HIPIFY] info: CONVERTED refs by type:
  memory: 2
  define: 1
[HIPIFY] info: CONVERTED refs by API:
  CUDA RT API: 3
[HIPIFY] info: CONVERTED refs by names:
  cudaHostRegister: 1
  cudaHostRegisterDefault: 1
  cudaHostUnregister: 1
